--- a/style.css
+++ b/style.css
@@ -28,7 +28,10 @@ body {
     text-align: right;
     border-radius: 5px;
     margin-bottom: 20px;
+    min-height: 50px; 
+    overflow: hidden; 
 }
+
 
 
 .buttons {
